// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Data Display/Text Bold 1`] = `
<p
  className="sc-crXcEl jzSdUV"
  size="sm"
>
  Some Text...
</p>
`;

exports[`Storyshots Data Display/Text Centered 1`] = `
<p
  className="sc-crXcEl blzUc"
  size="sm"
>
  Some Text...
</p>
`;

exports[`Storyshots Data Display/Text Custom Color 1`] = `
<p
  className="sc-crXcEl jHiAqr"
  color="primary"
  size="sm"
>
  Some Text...
</p>
`;

exports[`Storyshots Data Display/Text Custom Size 1`] = `
Array [
  <p
    className="sc-crXcEl bobcj"
    size="sm"
  >
    Some Text...
  </p>,
  <p
    className="sc-crXcEl ehLDTS"
    size="md"
  >
    Some Text...
  </p>,
  <p
    className="sc-crXcEl dsXjCd"
    size="lg"
  >
    Some Text...
  </p>,
  <p
    className="sc-crXcEl eSwLIl"
    size="xl"
  >
    Some Text...
  </p>,
]
`;

exports[`Storyshots Data Display/Text Paragraph Element 1`] = `
Array [
  <p
    className="sc-crXcEl bobcj"
    size="sm"
  >
    Paragraph element is by default
  </p>,
  <p
    className="sc-crXcEl bobcj"
    size="sm"
  >
    Some Text...
  </p>,
]
`;

exports[`Storyshots Data Display/Text Simple Texttext 1`] = `
<p
  className="sc-crXcEl bobcj"
  size="sm"
>
  Some Text...
</p>
`;

exports[`Storyshots Data Display/Text Span Element 1`] = `
Array [
  <span
    className="sc-crXcEl bobcj"
    size="sm"
  >
    This are span elements.
  </span>,
  <span
    className="sc-crXcEl bobcj"
    size="sm"
  >
    Some Text in a span...
  </span>,
]
`;

exports[`Storyshots Data Display/Text With Tooltip 1`] = `
<span
  aria-describedby={null}
  className="sc-crXcEl jHiAqr"
  color="primary"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseLeave={[Function]}
  onMouseOver={[Function]}
  onTouchEnd={[Function]}
  onTouchStart={[Function]}
  size="sm"
  title="some other text"
>
  Some Text...
</span>
`;
